[package]
name = "fsm_lang"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1.3"
tree = { path = "../tree" }

[lib]
name = "fsm_lang"
crate-type = ["staticlib", "dylib"]

[lib.target.'cfg(unix)']
rustflags = ["-C", "link-args=-lfoo -lbar"]

